--- a/package.json
+++ b/package.json
@@ -2,22 +2,29 @@
   "name": "learning-webpack",
   "version": "0.0.0",
   "description": "웹팩 가이드라인 따라해보면서 학습해보기",
+  "main": "index.html",
   "scripts": {
     "prettier": "prettier --write .",
+    "build": "webpack",
     "deploy": "npm run build && npx gh-pages -d dist"
   },
   "author": "jaehyeonjung0613",
   "homepage": "https://jaehyeonjung0613.github.io/learning-webpack",
   "license": "MIT",
   "devDependencies": {
+    "@types/lodash": "^4.17.9",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.6.2",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
