--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
     "@types/lodash": "^4.17.9",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
+    "css-loader": "^7.1.2",
+    "csv-loader": "^3.0.5",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "json5": "^2.2.3",
     "prettier": "^3.3.3",
+    "style-loader": "^4.0.0",
+    "toml": "^3.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.2",
     "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "xml-loader": "^1.2.1",
+    "yamljs": "^0.3.0"
   },
   "dependencies": {
     "lodash": "^4.17.21"
