--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "style-loader": "^4.0.0",
     "toml": "^3.0.0",
     "ts-loader": "^9.5.1",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.6.2",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
