--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "html-webpack-plugin": "^5.6.0",
     "json5": "^2.2.3",
     "prettier": "^3.3.3",
     "style-loader": "^4.0.0",
