--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.html",
   "scripts": {
     "prettier": "prettier --write .",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
+    "server": "node server.js",
     "build": "webpack",
     "deploy": "npm run build && npx gh-pages -d dist"
   },
@@ -20,6 +23,7 @@
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "express": "^4.21.0",
     "html-webpack-plugin": "^5.6.0",
     "json5": "^2.2.3",
     "prettier": "^3.3.3",
@@ -30,6 +34,8 @@
     "typescript": "^5.6.2",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^7.4.2",
+    "webpack-dev-server": "^5.1.0",
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
   },
