exp: Bundle Analysis analyse - package.json anaysis script 추가 - README 수정

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "server": "node server.js",
+    "analysis": "webpack --profile --json > stats.json",
     "build": "webpack",
     "deploy": "npm run build && npx gh-pages -d dist"
   },
