--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.21.0",
     "html-webpack-plugin": "^5.6.0",
     "json5": "^2.2.3",
+    "lodash": "^4.17.21",
     "prettier": "^3.3.3",
     "style-loader": "^4.0.0",
     "toml": "^3.0.0",
@@ -39,8 +40,5 @@
     "webpack-dev-server": "^5.1.0",
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21"
   }
 }
