learn: Environment Variables - webpack.config.js env 호출 코드 작성 - package.json --env 스크립트 추가

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "webpack serve --open",
     "server": "node server.js",
     "analysis": "webpack --profile --json > stats.json",
-    "build": "webpack",
+    "build": "webpack --env goal=local --env production",
     "deploy": "npm run build && npx gh-pages -d dist"
   },
   "author": "jaehyeonjung0613",
