--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/lodash": "^4.17.9",
+    "@types/node": "^22.7.5",
+    "@types/webpack-env": "^1.18.5",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
     "css-loader": "^7.1.2",
